force-app/main/default/objects/Detalle_Manifiesto_Exportacion__c/fields/Guias_de_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Guias_de_Exportacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guías de Exportación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Guias_de_Exportacion__c.Agente__c</field>
            <operation>equals</operation>
            <value>Hot Express</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Guias_de_Exportacion__c</referenceTo>
    <relationshipLabel>Detalles Manifiestos Exportaciones</relationshipLabel>
    <relationshipName>Obj_Intermedio</relationshipName>
    <type>Lookup</type>
</CustomField>