force-app/main/default/objects/Detalle_Manifiesto_Exportacion__c/fields/Manifiesto_Interno__c.field-meta.xml
<CustomField>
    <fullName>Manifiesto_Interno__c</fullName>
    <label>Manifiesto Interno</label>
    <referenceTo>Manifiesto_Exportacion__c</referenceTo>
    <relationshipLabel>Detalles Manifiestos Exportaciones</relationshipLabel>
    <relationshipName>Obj_Intermedio</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>